--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
-    <title>Meu deus do céu</title>
+    <title>DrivenEats - Sua comida em 6 minutos</title>
 </head>
 <body>
+    <header>
+        <div class="conteudo-topo">
+            <h1>DrivenEats</h1>
+            <h3>Sua comida em 6 minutos</h3>
+        </div>
+    </header>
     
+    <footer>
+            <button class="botao-concluir">Selecione os 3 itens para fechar o pedido</button>
+    </footer>
 </body>
 </html>
