--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>DrivenEats - Sua comida em 6 minutos</title>
 </head>
 <body>
@@ -18,7 +18,22 @@
             <h3>Sua comida em 6 minutos</h3>
         </div>
     </header>
-    
+
+    <main>
+        <div class="secao-prato">
+            <h2>Primeiro, seu prato</h2>
+            <div class="card-prato"></div>
+        </div>
+        <div class="secao-bebida">
+            <h2>Agora, sua bebida</h2>
+            <div class="card-bebida"></div>
+        </div>
+        <div class="secao-sobremesa">
+            <h2>Por fim, sua sobremesa</h2>
+            <div class="card-sobremesa"></div>
+        </div>
+    </main>
+
     <footer>
             <button class="botao-concluir">Selecione os 3 itens para fechar o pedido</button>
     </footer>
