--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <img src="images/xtudo.jpg" alt="Tudo Burger">
                         <h4>Tudo Burger</h4>
                         <h5>Carne artesanal, queijo, bacon, presunto e salada</h5>
-                        <h6>R$ 17,90</h6>
+                        <h6>R$ <strong>17,90</strong></h6>
                         <ion-icon class="ocultar" name="checkmark-circle"></ion-icon>
                     </div>
                     
@@ -38,7 +38,7 @@
                         <img src="images/prato-basico.jpg" alt="Prato Básico">
                         <h4>Prato Básico</h4>
                         <h5>Arroz, estrogonofe de carne e batata palha</h5>
-                        <h6>R$ 14,90</h6>
+                        <h6>R$ <strong>14,90</strong></h6>
                         <ion-icon class="ocultar" name="checkmark-circle"></ion-icon>
                     </div>
                 </li>
@@ -47,7 +47,7 @@
                         <img src="images/macarrao.jpg" alt="Macarrão ao Molho">
                         <h4>Macarrão ao Molho</h4>
                         <h5>Macarrão com molho de requeijão e maionese</h5>
-                        <h6>R$ 13,90</h6>
+                        <h6>R$ <strong>13,90</strong></h6>
                         <ion-icon class="ocultar" name="checkmark-circle"></ion-icon>
                     </div>
                 </li>
@@ -56,7 +56,7 @@
                         <img src="images/coxa-de-frango.jpg" alt="Coxa de Frango">
                         <h4>Coxa de Frango</h4>
                         <h5>5 coxas de frango com ervas</h5>
-                        <h6>R$ 16,90</h6>
+                        <h6>R$ <strong>16,90</strong></h6>
                         <ion-icon class="ocultar" name="checkmark-circle"></ion-icon>
                     </div>
                 </li>
@@ -70,7 +70,7 @@
                         <img src="images/coca.png" alt="Coca Cola Lata">
                         <h4>Coca Cola Lata</h4>
                         <h5>Lata Coca Cola 350 ml gelada</h5>
-                        <h6>R$ 4,90</h6>
+                        <h6>R$ <strong>4,90</strong></h6>
                         <ion-icon class="ocultar" name="checkmark-circle"></ion-icon>
                     </div>
                 </li>
@@ -79,7 +79,7 @@
                         <img src="images/fanta-laranja.png" alt="Fanta Laranja Lata">
                         <h4>Fanta Laranja Lata</h4>
                         <h5>Lata Fanta Laranja 350 ml gelada</h5>
-                        <h6>R$ 3,90</h6>
+                        <h6>R$ <strong>3,90</strong></h6>
                         <ion-icon class="ocultar" name="checkmark-circle"></ion-icon>
                     </div>
                 </li>
@@ -88,7 +88,7 @@
                         <img src="images/guarana.png" alt="Guaraná Lata">
                         <h4>Guaraná Lata</h4>
                         <h5>Lata Guaraná 350 ml gelada</h5>
-                        <h6>R$ 4,90</h6>
+                        <h6>R$ <strong>4,90</strong></h6>
                         <ion-icon class="ocultar" name="checkmark-circle"></ion-icon>
                     </div>
                 </li>
@@ -102,7 +102,7 @@
                         <img src="images/casquinha.png" alt="Casquinha Baunilha">
                         <h4>Casquinha Baunilha</h4>
                         <h5>1 casquinha de baunilha</h5>
-                        <h6>R$ 2,90</h6>
+                        <h6>R$ <strong>2,90</strong></h6>
                         <ion-icon class="ocultar" name="checkmark-circle"></ion-icon>
                     </div>
                 </li>
@@ -111,7 +111,7 @@
                         <img src="images/sundae.png" alt="Sundae Chocolate">
                         <h4>Sundae Chocolate</h4>
                         <h5>1 sundae de chocolate 250ml</h5>
-                        <h6>R$ 4,90</h6>
+                        <h6>R$ <strong>5,90</strong></h6>
                         <ion-icon class="ocultar" name="checkmark-circle"></ion-icon>
                     </div>
                 </li>
@@ -120,7 +120,7 @@
                         <img src="images/milkshake.png" alt="Milkshake Morango">
                         <h4>Milkshake Morango</h4>
                         <h5>1 milkshake de morango</h5>
-                        <h6>R$ 11,90</h6>
+                        <h6>R$ <strong>11,90</strong></h6>
                         <ion-icon class="ocultar" name="checkmark-circle"></ion-icon>
                     </div>
                 </li>
@@ -129,7 +129,7 @@
     </main>
 
     <footer>
-        <button class="botao-concluir">Selecione os 3 itens para fechar o pedido</button>
+        <button class="botao-concluir" onclick="finalizarPedido()">Selecione os 3 itens para fechar o pedido</button>
     </footer>
     <script src="scripts/scripts.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
