--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel='shortcut icon' type='image/x-icon' href='images/favicon.ico' />
     <title>DrivenEats - Sua comida em 6 minutos</title>
 </head>
 <body>
@@ -128,7 +129,7 @@
     </main>
 
     <footer>
-        <button class="botao-concluir" onclick="abrirPopup()">Selecione os 3 itens para fechar o pedido</button>
+        <button class="botao-concluir" onclick="popup(true)">Selecione os 3 itens para fechar o pedido</button>
     </footer>
 
     <div class="fundo-confirme-pedido ocultar">
@@ -152,8 +153,8 @@
                     <div class="total-itens">R$ <strong>valor</strong></div>
                 </div>
             </div>
-            <button class="botao-popup botao-tudocerto" onclick="">Tudo certo, pode pedir!</button>
-            <button class="botao-popup botao-cancelar">Cancelar</button>
+            <button class="botao-popup botao-tudocerto" onclick="finalizarPedido()">Tudo certo, pode pedir!</button>
+            <button class="botao-popup botao-cancelar" onclick="popup(false)">Cancelar</button>
         </div>
     </div>
 
