melhorias no layout, flutuação dos cards e botão fechar pedido

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         </div>
     </main>
 
-    <footer>
-        <button class="botao-concluir" onclick="popup(true)">Selecione os 3 itens para fechar o pedido</button>
+    <footer class="flex-center">
+        <button class="botao-concluir flex-center" onclick="popup(true)">Selecione os 3 itens para fechar o pedido</button>
     </footer>
 
     <div class="fundo-confirme-pedido ocultar">
